//FILE=IotCommon
//source $JDE_DIR/Framework/scripts/common.sh;toBashDir $JDE_DIR JDE_BASH;include=$JDE_BASH/Public/jde/iot/types/proto;source=$JDE_BASH/Public/src/iot/types/proto;
//cd $include;protoc --cpp_out . $FILE.proto; mkdir -p $source;cd $source;mv $include/$FILE.pb.cc .;mklink $FILE.pb.h $include;

syntax = "proto3";
package Jde.Iot.Proto;

message NodeId{
	uint32 namespace_index=1;
  oneof Identifier{
		uint32 numeric=2;
		string string=3;
		bytes guid=4;
		bytes byte_string=5;
	}
}

message ExpandedNodeId{
	NodeId node=1;
	string namespace_uri=2;
	uint32 server_index=3;
}